SERVER-61110 Fixing locking in AuthorizationContract::contains